--- a/presentation/src/main/res/layout/fragment_card_details.xml
+++ b/presentation/src/main/res/layout/fragment_card_details.xml
@@ -3,8 +3,18 @@
     android:layout_height="wrap_content"
     android:padding="@dimen/padding_normal">
 
+    <TextView
+        android:id="@+id/tv_title"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:textColor="@color/black"
+        android:layout_margin="30dp"
+        android:text="@string/text_title"/>
+
     <android.support.design.widget.TextInputLayout
         android:id="@+id/til_name"
+        android:layout_below="@+id/tv_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" >
 
@@ -15,6 +25,8 @@
             android:inputType="textCapCharacters"
             android:maxLength="22"
             android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZ "
+            android:singleLine="true"
+            android:textColor="@color/black"
             android:hint="@string/textinputedittext_name" />
     </android.support.design.widget.TextInputLayout>
 
@@ -30,6 +42,8 @@
             android:layout_height="wrap_content"
             android:maxLength="16"
             android:digits="1234567890"
+            android:singleLine="true"
+            android:textColor="@color/black"
             android:hint="@string/textinputedittext_card_number" />
     </android.support.design.widget.TextInputLayout>
 
@@ -53,6 +67,9 @@
                 android:inputType="textCapCharacters"
                 android:maxLength="3"
                 android:digits="1234567890"
+                android:singleLine="true"
+                android:imeOptions="actionNext"
+                android:textColor="@color/black"
                 android:hint="@string/textinputedittext_cvv" />
         </android.support.design.widget.TextInputLayout>
 
@@ -69,6 +86,8 @@
                 android:inputType="textCapCharacters"
                 android:maxLength="2"
                 android:digits="1234567890"
+                android:singleLine="true"
+                android:textColor="@color/black"
                 android:hint="@string/textinputedittext_expiry_month" />
         </android.support.design.widget.TextInputLayout>
 
@@ -85,6 +104,8 @@
                 android:inputType="textCapCharacters"
                 android:maxLength="4"
                 android:digits="1234567890"
+                android:singleLine="true"
+                android:textColor="@color/black"
                 android:hint="@string/textinputedittext_expiry_year" />
         </android.support.design.widget.TextInputLayout>
 
@@ -93,8 +114,10 @@
     <Button android:id="@+id/btn_submit"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/activity_vertical_margin"
+        android:layout_marginTop="40dp"
         android:layout_below="@id/ll_card_details"
+        android:textColor="@color/white"
+        android:background="@color/colorAccent"
         android:text="@string/button_submit"/>
 
 </RelativeLayout>
